# genesis-foods-api-playground

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/genesis/: build_upload.py  bulk_download.py  config.ini  graphql_responses.json  input_data.json
